# outer_service_1c_test

./: .gitignore  build.sh  pyproject.toml  requirements.txt
config/: settings.py  urls.py
employees/: urls.py  views.py
employees/vendors/: employee_1c_service.py
