[tool.poetry]
name = "integration-1c-test"
version = "0.1.0"
description = ""
authors = ["Denis Dolgopolov <jlomuk1990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
uvicorn = "^0.20.0"
aiohttp = "^3.8.3"
gunicorn = "^20.1.0"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}


[build-system]
requires = ["setuptools", "poetry_core"]
build-backend = "poetry.core.masonry.api"
